--- a/Delivery_User/app/src/main/AndroidManifest.xml
+++ b/Delivery_User/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".menu.StoreActivityOne"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,9 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".authentication.LoginActivity"/>
-        <activity android:name=".authentication.RegisterActivity"/>
-        <activity android:name=".menu.ActivityMainMenu"/>
+        <activity android:name=".authentication.LoginActivity" />
+        <activity android:name=".authentication.RegisterActivity" />
+        <activity android:name=".menu.ActivityMainMenu" />
     </application>
 
 </manifest>
